auto/k3s/mysql/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  ports:
  - port: 3306         # Port for internal cluster communication (other pods connect to this)
    targetPort: 3306   # Port on the MySQL pod that is receiving traffic
    nodePort: 30036
    protocol: TCP
    name: mysql
  selector:
    app: mysql
