auto/k3s/mysql/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql
spec:
  rules:
  - host: mysql.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mysql
            port:
              number: 3306
